@@ -1,5 +1,7 @@
 2007-07-12 Ian Rutt
  * More reformatting in glide_thck.F90
+ * Removed redundant call to ds2y from slapsolv - this is called
+   automatically within dslucs.
 
 2007-07-11 Ian Rutt
  * Improved code formatting in glide_thck.F90
